--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">Fixed navbar</a>
@@ -23,17 +23,19 @@
       </form>
     </div>
   </nav>
-</header>
+
 
 <!-- Begin page content -->
-<main role="main" class="container content">
-  <h1 class="mt-5">Welcome to angular-project-template!</h1>
-  <h2>Bootstrap Example: Sticky footer with fixed navbar</h2>
-  <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>.content</code>.</p>
+<main role="main" class="container">
+  <h1>Welcome to angular-project-template!</h1>
+  <h2>Navbar example</h2>
+  <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
 </main>
 
+<!--
 <footer class="footer">
-  <div class="container">
+  <div>
     <span class="text-muted">Place sticky footer content here.</span>
   </div>
 </footer>
+-->
