--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,41 +2,14 @@
 @import "variables.scss";
 @import "mixins.scss";
 
-// Include all of Bootstrap and see more options in https://getbootstrap.com/docs/4.0/getting-started/theming/
+// Include all of Bootstrap
+// See more Bootstrap options in https://getbootstrap.com/docs/4.0/getting-started/theming/
 @import "node_modules/bootstrap/scss/bootstrap";
-
 
 // Override Bootstrap CSS or Custom style here
 
-/* Sticky footer styles - Can be removed if not being used
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
+/* Show it is fixed to the top */
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-
-  .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-}
-
-.content {
-  padding: 60px 15px 0;
-}
-
-code {
-  font-size: 80%;
+  min-height: 75rem;
+  padding-top: 4.5rem;
 }
